// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Component Snapshots should render button action 1`] = `
<div
  className="absolute sc-bxivhb dEKikf"
  data-max={0}
>
  <button
    className="transition-all sc-cSHVUG bRWBVW"
    onClick={[Function]}
    type="button"
  >
    <span
      className="sc-gZMcBi giNnHm"
      style={
        Object {
          "color": "#FFFFFF",
        }
      }
    >
      Próximo
    </span>
  </button>
</div>
`;

exports[`Slider Component Snapshots should render common description 1`] = `
<div
  className="flex-column-center sc-gzVnrw dkdosU"
>
  <p
    className="sc-iwsKbI ibDZNz"
    style={
      Object {
        "color": "#333",
      }
    }
  >
    Aliquam facilisis tempus neque, ac accumsan elit bibendum non. Duis molestie libero porta tortor placerat, vitae cursus diam placerat. Fusce feugiat libero erat, suscipit venenatis...
  </p>
</div>
`;

exports[`Slider Component Snapshots should render common image 1`] = `
Array [
  <div
    className="relative"
    style={
      Object {
        "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
      }
    }
  >
    <div
      className="full-content absolute sc-EHOje fZgOQP"
    />
  </div>,
  <div
    className="relative"
    style={
      Object {
        "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
      }
    }
  >
    <div
      className="full-content absolute sc-EHOje fZgOQP"
    />
    <div
      className="relative sc-bZQynM sMRAj"
    >
      Children
    </div>
  </div>,
]
`;

exports[`Slider Component Snapshots should render common sub title 1`] = `
<h3
  className="sc-dnqmqq bJaIPW"
  style={
    Object {
      "color": "#333",
    }
  }
>
  Lorem ipsum dolor
</h3>
`;

exports[`Slider Component Snapshots should render common title 1`] = `
<h2
  className="sc-htoDjs kexmgL"
  style={
    Object {
      "color": "#333",
    }
  }
>
  Lorem ipsum dolor
</h2>
`;

exports[`Slider Component Snapshots should render slider component 1`] = `
<div
  className="relative sc-bdVaJa bJmnKC"
>
  <div
    className="full-content relative sc-bwzfXH uTxCW"
  >
    <div
      className="hidden transition-all absolute sc-htpNat dxOMxF"
      data-index={1}
      data-template="default"
    >
      <div
        className="grid full-content sc-gqjmRU kIqdMS"
      >
        <div
          className="flex-column-center relative"
          style={
            Object {
              "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
            }
          }
        >
          <div
            className="full-content absolute sc-EHOje fZgOQP"
          />
          <div
            className="relative sc-bZQynM sMRAj"
          >
            <h2
              className="sc-htoDjs kexmgL"
              style={
                Object {
                  "color": "#FFFFFF",
                }
              }
            >
              Lorem ipsum dolor
            </h2>
            <h3
              className="sc-dnqmqq bJaIPW"
              style={
                Object {
                  "color": "#FFFFFF",
                }
              }
            >
              Sed non dui sed purus hendrerit aliquet a nec magna. 
            </h3>
          </div>
        </div>
        <div
          className="flex-column-center sc-gzVnrw dkdosU"
        >
          <p
            className="sc-iwsKbI ibDZNz"
            style={
              Object {
                "color": "#333333",
              }
            }
          >
            Aliquam facilisis tempus neque, ac accumsan elit bibendum non. Duis molestie libero porta tortor placerat, vitae cursus diam placerat. Fusce feugiat libero erat, suscipit venenatis...
          </p>
        </div>
      </div>
    </div>
    <div
      className="hidden transition-all absolute sc-htpNat dxOMxF"
      data-index={2}
      data-template="template_1"
    >
      <div
        className="full-content grid sc-jTzLTM hfhqii"
      >
        <div
          className="flex-algin-end full-content relative"
          style={
            Object {
              "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
            }
          }
        >
          <div
            className="full-content absolute sc-EHOje fZgOQP"
          />
        </div>
        <div>
          <div
            className="sc-fjdhpX dJvaXu"
          >
            <h2
              className="sc-htoDjs kexmgL"
              style={
                Object {
                  "color": "#333333",
                }
              }
            >
              Lorem ipsum dolor
            </h2>
            <h3
              className="sc-dnqmqq bJaIPW"
              style={
                Object {
                  "color": "#999999",
                }
              }
            >
              Sed non dui sed purus hendrerit aliquet a nec magna. 
            </h3>
          </div>
          <div
            className="flex-column-center sc-gzVnrw dkdosU"
          >
            <p
              className="sc-iwsKbI ibDZNz"
              style={
                Object {
                  "color": "#333333",
                }
              }
            >
              Aliquam facilisis tempus neque, ac accumsan elit bibendum non. Duis molestie libero porta tortor placerat, vitae cursus diam placerat. Fusce feugiat libero erat, suscipit venenatis...
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="hidden transition-all absolute sc-htpNat dxOMxF"
      data-index={3}
      data-template="template_2"
    >
      <div
        className="full-content sc-jzJRlG bhbMmg"
      >
        <div
          className="flex-algin-end full-content relative"
          style={
            Object {
              "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
            }
          }
        >
          <div
            className="full-content absolute sc-EHOje fZgOQP"
          />
          <div
            className="relative sc-bZQynM sMRAj"
          >
            <h2
              className="sc-htoDjs kexmgL"
              style={
                Object {
                  "color": "#FFFFFF",
                }
              }
            >
              Lorem ipsum dolor
            </h2>
            <h3
              className="sc-dnqmqq bJaIPW"
              style={
                Object {
                  "color": "#FFFFFF",
                }
              }
            >
              Sed non dui sed purus hendrerit aliquet a nec magna. 
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div
      className="hidden transition-all absolute sc-htpNat dxOMxF"
      data-index={4}
      data-template="template_3"
    >
      <div
        className="full-content sc-VigVT gNgpkb"
      >
        <div
          className="flex-column-center full-content relative"
          style={
            Object {
              "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
            }
          }
        >
          <div
            className="full-content absolute sc-EHOje fZgOQP"
          />
          <div
            className="relative sc-bZQynM sMRAj"
          >
            <h2
              className="sc-htoDjs kexmgL"
              style={
                Object {
                  "color": "#FFFFFF",
                }
              }
            >
              Lorem ipsum dolor
            </h2>
            <h3
              className="sc-dnqmqq bJaIPW"
              style={
                Object {
                  "color": "#FFFFFF",
                }
              }
            >
              Sed non dui sed purus hendrerit aliquet a nec magna. 
            </h3>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="absolute sc-bxivhb dEKikf"
    data-max={0}
  >
    <button
      className="transition-all sc-cSHVUG bRWBVW"
      onClick={[Function]}
      type="button"
    >
      <span
        className="sc-gZMcBi giNnHm"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        Próximo
      </span>
    </button>
  </div>
</div>
`;

exports[`Slider Component Snapshots should render slider component without childrens 1`] = `null`;

exports[`Slider Component Snapshots should render slider item 1`] = `
<div
  className="hidden transition-all absolute sc-htpNat dxOMxF"
  data-index={1}
  data-template="default"
>
  <div
    className="grid full-content sc-gqjmRU kIqdMS"
  >
    <div
      className="flex-column-center relative"
      style={
        Object {
          "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
        }
      }
    >
      <div
        className="full-content absolute sc-EHOje fZgOQP"
      />
      <div
        className="relative sc-bZQynM sMRAj"
      >
        <h2
          className="sc-htoDjs kexmgL"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Lorem ipsum dolor
        </h2>
        <h3
          className="sc-dnqmqq bJaIPW"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Sed non dui sed purus hendrerit aliquet a nec magna. 
        </h3>
      </div>
    </div>
    <div
      className="flex-column-center sc-gzVnrw dkdosU"
    >
      <p
        className="sc-iwsKbI ibDZNz"
        style={
          Object {
            "color": "#333333",
          }
        }
      >
        Aliquam facilisis tempus neque, ac accumsan elit bibendum non. Duis molestie libero porta tortor placerat, vitae cursus diam placerat. Fusce feugiat libero erat, suscipit venenatis...
      </p>
    </div>
  </div>
</div>
`;

exports[`Slider Component Snapshots should render template list options 1`] = `
Array [
  <div
    className="grid full-content sc-gqjmRU kIqdMS"
  >
    <div
      className="flex-column-center relative"
      style={
        Object {
          "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
        }
      }
    >
      <div
        className="full-content absolute sc-EHOje fZgOQP"
      />
      <div
        className="relative sc-bZQynM sMRAj"
      >
        <h2
          className="sc-htoDjs kexmgL"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Lorem ipsum dolor
        </h2>
        <h3
          className="sc-dnqmqq bJaIPW"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Sed non dui sed purus hendrerit aliquet a nec magna. 
        </h3>
      </div>
    </div>
    <div
      className="flex-column-center sc-gzVnrw dkdosU"
    >
      <p
        className="sc-iwsKbI ibDZNz"
        style={
          Object {
            "color": "#333333",
          }
        }
      >
        Aliquam facilisis tempus neque, ac accumsan elit bibendum non. Duis molestie libero porta tortor placerat, vitae cursus diam placerat. Fusce feugiat libero erat, suscipit venenatis...
      </p>
    </div>
  </div>,
  <div
    className="grid full-content sc-gqjmRU kIqdMS"
  >
    <div
      className="flex-column-center relative"
      style={
        Object {
          "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
        }
      }
    >
      <div
        className="full-content absolute sc-EHOje fZgOQP"
      />
      <div
        className="relative sc-bZQynM sMRAj"
      >
        <h2
          className="sc-htoDjs kexmgL"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Lorem ipsum dolor
        </h2>
        <h3
          className="sc-dnqmqq bJaIPW"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Sed non dui sed purus hendrerit aliquet a nec magna. 
        </h3>
      </div>
    </div>
    <div
      className="flex-column-center sc-gzVnrw dkdosU"
    >
      <p
        className="sc-iwsKbI ibDZNz"
        style={
          Object {
            "color": "#333333",
          }
        }
      >
        Aliquam facilisis tempus neque, ac accumsan elit bibendum non. Duis molestie libero porta tortor placerat, vitae cursus diam placerat. Fusce feugiat libero erat, suscipit venenatis...
      </p>
    </div>
  </div>,
  <div
    className="full-content grid sc-jTzLTM hfhqii"
  >
    <div
      className="flex-algin-end full-content relative"
      style={
        Object {
          "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
        }
      }
    >
      <div
        className="full-content absolute sc-EHOje fZgOQP"
      />
    </div>
    <div>
      <div
        className="sc-fjdhpX dJvaXu"
      >
        <h2
          className="sc-htoDjs kexmgL"
          style={
            Object {
              "color": "#333333",
            }
          }
        >
          Lorem ipsum dolor
        </h2>
        <h3
          className="sc-dnqmqq bJaIPW"
          style={
            Object {
              "color": "#999999",
            }
          }
        >
          Sed non dui sed purus hendrerit aliquet a nec magna. 
        </h3>
      </div>
      <div
        className="flex-column-center sc-gzVnrw dkdosU"
      >
        <p
          className="sc-iwsKbI ibDZNz"
          style={
            Object {
              "color": "#333333",
            }
          }
        >
          Aliquam facilisis tempus neque, ac accumsan elit bibendum non. Duis molestie libero porta tortor placerat, vitae cursus diam placerat. Fusce feugiat libero erat, suscipit venenatis...
        </p>
      </div>
    </div>
  </div>,
  <div
    className="full-content sc-jzJRlG bhbMmg"
  >
    <div
      className="flex-algin-end full-content relative"
      style={
        Object {
          "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
        }
      }
    >
      <div
        className="full-content absolute sc-EHOje fZgOQP"
      />
      <div
        className="relative sc-bZQynM sMRAj"
      >
        <h2
          className="sc-htoDjs kexmgL"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Lorem ipsum dolor
        </h2>
        <h3
          className="sc-dnqmqq bJaIPW"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Sed non dui sed purus hendrerit aliquet a nec magna. 
        </h3>
      </div>
    </div>
  </div>,
  <div
    className="full-content sc-VigVT gNgpkb"
  >
    <div
      className="flex-column-center full-content relative"
      style={
        Object {
          "backgroundImage": "url(https://img.ibxk.com.br/2019/07/10/10091423089001.jpg)",
        }
      }
    >
      <div
        className="full-content absolute sc-EHOje fZgOQP"
      />
      <div
        className="relative sc-bZQynM sMRAj"
      >
        <h2
          className="sc-htoDjs kexmgL"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Lorem ipsum dolor
        </h2>
        <h3
          className="sc-dnqmqq bJaIPW"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
        >
          Sed non dui sed purus hendrerit aliquet a nec magna. 
        </h3>
      </div>
    </div>
  </div>,
]
`;
